--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
-    <title></title>
+    <title>MAIN PAGE</title>
     <link rel="stylesheet" type="text/css" href="css/index.css">
   </head>
   <body>
@@ -12,17 +12,20 @@
           <div class="top_left">
             <ul class="util_menu_ul">
               <li class="my_name_li">
-                강동연
+                <a href="https://kdy2541.github.io/disc202/" target="_blank">강동연's WEB</a>
               </li>
             </ul>
           </div>
           <div class="top_right">
             <ul class="util_menu_ul">
-              <li class="top_right_ID_input">
-                ID:<input type="text" name="ID" size="15">
+              <li>
+                ID:<input type="text" name="ID" size="15" id="top_right_ID_input">
               </li>
-              <li class="top_right_pw_input">
-                PW:<input type="password" name="PASSWORD" size="15">
+              <li>
+                PW:<input type="password" name="PASSWORD" size="15" id="top_right_pw_input">
+              </li>
+              <li>
+                <button id="top_right_login_btn">Login</button>
               </li>
             </ul>
           </div>
