--- a/index.html
+++ b/index.html
@@ -10,26 +10,26 @@
     <audio src="" id = "audio-source"></audio>
     <section class="home-section">
       <div class="home-util-div">
-        <img src="assets/images/login.jpg" class="login-section-btn icon" alt="">
-        <a href="https://github.com/kdy2541?tab=repositories"><img src="assets/images/github.jpg" class="github-btn icon" alt=""></a>
+        <img src="./assets/images/login.jpg" class="login-section-btn icon" alt="">
+        <a href="https://github.com/kdy2541?tab=repositories"><img src="./assets/images/github.jpg" class="github-btn icon" alt=""></a>
       </div>
       <div class="carousel">
-        <img src="assets/images/1.jpg" class="active" alt="">
-        <img src="assets/images/2.jpg" alt="">
-        <img src="assets/images/3.jpg" alt="">
-        <img src="assets/images/4.jpg" alt="">
-        <img src="assets/images/5.jpg" alt="">
+        <img src="./assets/images/1.jpg" class="active" alt="">
+        <img src="./assets/images/2.jpg" alt="">
+        <img src="./assets/images/3.jpg" alt="">
+        <img src="./assets/images/4.jpg" alt="">
+        <img src="./assets/images/5.jpg" alt="">
       </div>
     </section>
     <section class="music-player-section">
 
-      <img src="assets/images/back.jpg" class="back-btn icon hide" alt="">
-      <img src="assets/images/next.jpg" class="nav-btn icon hide" alt="">
+      <img src="./assets/images/back.jpg" class="back-btn icon hide" alt="">
+      <img src="./assets/images/next.jpg" class="nav-btn icon hide" alt="">
 
       <h1 class="current-song-name">song 1</h1>
       <p class="artist-name hide">artist 1</p>
 
-      <img src="assets/images/1.jpg" class="cover hide" alt="">
+      <img src="./assets/images/1.jpg" class="cover hide" alt="">
 
       <div class="seek-bar-container">
           <input type="range" class="music-seek-bar" value="0">
@@ -38,75 +38,75 @@
       </div>
 
       <div class="controls">
-          <span class="fas fa-redo"><img src="assets/images/redo.jpg"></span>
+          <span class="fas fa-redo"><img src="./assets/images/redo.jpg"></span>
           <div class="main">
-              <i class="fas fa-backward active"><img src="assets/images/backward.jpg"></i>
-              <i class="fas fa-play active"><img src="assets/images/play.jpg"></i>
-              <i class="fas fa-pause"><img src="assets/images/pause.jpg"></i>
-              <i class="fas fa-forward active"><img src="assets/images/forward.jpg"></i>
+              <i class="fas fa-backward active"><img src="./assets/images/backward.jpg"></i>
+              <i class="fas fa-play active"><img src="./assets/images/play.jpg"></i>
+              <i class="fas fa-pause"><img src="./assets/images/pause.jpg"></i>
+              <i class="fas fa-forward active"><img src="./assets/images/forward.jpg"></i>
           </div>
           <input type="range" class="volume-slider" max="1" value="1" step="0.1">
-          <span class="fas fa-volume-up"><img src="assets/images/volume.jpg"></span>
+          <span class="fas fa-volume-up"><img src="./assets/images/volume.jpg"></span>
       </div>
 
     </section>
       <section class="playlist">
 
-      <img src="assets/images/back.jpg" class="back-btn icon" alt="">
+      <img src="./assets/images/back.jpg" class="back-btn icon" alt="">
 
       <h1 class="title">playlist</h1>
 
       <div class="queue active">
           <div class="queue-cover">
-              <img src="assets/images/1.jpg" alt="">
+              <img src="./assets/images/1.jpg" alt="">
           </div>
           <p class="name">song 1</p>
       </div>
       <div class="queue active">
           <div class="queue-cover">
-              <img src="assets/images/2.jpg" alt="">
+              <img src="./assets/images/2.jpg" alt="">
           </div>
           <p class="name">song 2</p>
       </div>
       <div class="queue active">
           <div class="queue-cover">
-              <img src="assets/images/3.jpg" alt="">
+              <img src="./assets/images/3.jpg" alt="">
           </div>
           <p class="name">song 3</p>
       </div>
       <div class="queue active">
           <div class="queue-cover">
-              <img src="assets/images/4.jpg" alt="">
+              <img src="./assets/images/4.jpg" alt="">
           </div>
           <p class="name">song 4</p>
       </div>
       <div class="queue active">
           <div class="queue-cover">
-              <img src="assets/images/5.jpg" alt="">
+              <img src="./assets/images/5.jpg" alt="">
           </div>
           <p class="name">song 5</p>
       </div>
       <div class="queue active">
           <div class="queue-cover">
-              <img src="assets/images/6.jpg" alt="">
+              <img src="./assets/images/6.jpg" alt="">
           </div>
           <p class="name">song 6</p>
       </div>
       <div class="queue active">
           <div class="queue-cover">
-              <img src="assets/images/7.jpg" alt="">
+              <img src="./assets/images/7.jpg" alt="">
           </div>
           <p class="name">song 7</p>
       </div>
       <div class="queue active">
           <div class="queue-cover">
-              <img src="assets/images/8.jpg" alt="">
+              <img src="./assets/images/8.jpg" alt="">
           </div>
           <p class="name">song 8</p>
       </div>
     </section>
     <section class="login-section">
-      <img src="assets/images/next.jpg" class="nav-btn icon hide" alt="">
+      <img src="./assets/images/next.jpg" class="nav-btn icon hide" alt="">
       <div class="inputs">
         <input id="ID" type="text" name="ID" placeholder="ID">
         <input id="PASSWORD" type="password" name="PASSWORD" placeholder="password">
