--- a/index.html
+++ b/index.html
@@ -1,10 +1,9 @@
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
-  <head profile="http://www.w3.org/2005/10/profile">
+  <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, height=device-height, minimum-scale=1.0, maximum-scale=1.0, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
-    <link rel="icon" type="image/png" href="http://example.com/myicon.png">
     <title></title>
   </head>
   <body>
@@ -20,6 +19,8 @@
         <img src="./img/3.jpg" alt="">
         <img src="./img/4.jpg" alt="">
         <img src="./img/5.jpg" alt="">
+      </div>
+      <div id="user-name" class="user-name-div">
       </div>
     </section>
     <section class="music-player-section">
@@ -108,9 +109,10 @@
     </section>
     <section class="login-section">
       <img src="./img/next.jpg" class="nav-btn icon hide" alt="">
-      <div class="inputs">
+      <div id = "input-div" class="inputs">
         <input id="ID" type="text" name="ID" placeholder="ID">
         <input id="PASSWORD" type="password" name="PASSWORD" placeholder="password">
+        <button class="login-small-btn active">Login</button>
       </div>
 
     </section>
