--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, height=device-height, minimum-scale=1.0, maximum-scale=1.0, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
-    <title></title>
+    <title>HOME</title>
   </head>
   <body>
     <audio src="" id = "audio-source"></audio>
